<resources>
    <string name="app_name">BESI</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <string name="pref_title_base_url">Base URL</string>
    <string name="pref_default_base_url">https://besistudy.org</string>
    <string name="pref_summary_base_url">Set base url to query</string>

    <string name="pref_title_api_token">API Token</string>
    <string name="pref_default_api_token">1a79ee75e7328538f9df96bdc7e22f9d17ae398e</string>
    <string name="pref_summary_api_token">Set API access token</string>

    <string name="pref_title_deploy_id">Deploy ID</string>
    <string name="pref_default_deploy_id">0</string>
    <string name="pref_summary_deploy_id">Set deployment ID</string>

    <string name="title_activity_get_emotions">Get Emotions</string>
    <string name="title_activity_get_activities">Get Activities</string>
    <string name="title_activity_home">BESI</string>
    <string name="title_activity_settings_activity">Settings</string>
    <string name="title_activity_schedule">Activity Log</string>

    <string name="title_activity_add_new">Activity Log</string>
    <string name="title_activity_daily_survey">Daily Report</string>

    <string name="pick_date">Select Date</string>
    <string name="pick_time">Select Time</string>
    <string name="title_activity_agitation_reports">Agitation Report</string>
    <string name="title_activity_add_activity_bundle">Activity Log</string>


    <!-- START Strings for NotificationsFragment -->
    <string name="notifications_question1">Was there a notification for this event?</string>
    <string name="notifications_question2">Was the notification accurate?</string>
    <string name="notifications_question3">Was the notification helpful?</string>

    <string name="notifications_btn_yes">Yes</string>
    <string name="notifications_btn_no">No</string>
    <!-- END Strings for NotificationsFragment -->


    <!--Why are these here @neeraj-->
    <string-array name="country_names2">
        <item>Reading</item>
        <item>Walking</item>
        <item>Bathing</item>
        <item>Brushing Teeth</item>
        <item>Listening To Music</item>
        <item>Preparing Food</item>
    </string-array>
    <string-array name="country_codes2">
        <item>Reading</item>
        <item>Walking</item>
        <item>Bathing</item>
        <item>Brushing Teeth</item>
        <item>Listening To Music</item>
        <item>Preparing Food</item>
    </string-array>

    <string-array name="room_names">
        <item>SELECT ONE</item>
        <item>Kitchen</item>
        <item>Bedroom</item>
        <item>Living Room</item>
        <item>Dining Room</item>
        <item>Entryway</item>
        <item>Other</item>
    </string-array>
    <!-- Need to write something because need to update commit-->
    <!--Strings for OBServation check boxes-->
    <!--
    <string name="OBS_Frustration">Frustrated</string>
    <string name="OBS_Ambulation">Pacing/Restless</string>
    <string name="OBS_Touching">Handling things inappropriately</string>
    <string name="OBS_Clothing">Inappropriate dressing/undressing</string>
    <string name="OBS_Physical1">Pushing/Hitting</string>
    <string name="OBS_Physical2">Biting/Scratching</string>
    <string name="OBS_OralFixation">Eating/Drinking inappropriate substances</string>
    <string name="OBS_Repetition">Repetitiveness</string>
    <string name="OBS_Vocal1">Complaining/Whining</string>
    <string name="OBS_Vocal2">Cursing/Shouting</string>
    <string name="OBS_Lost">Wandering/Getting Lost</string>
    <string name="OBS_Withdrawn">Quiet/Withdrawn</string>
    <string name="OBS_Shadowing">Imitating/Shadowing</string>
    <string name="OBS_Communication">Difficulty with language</string>
    -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notify_dialog">notify_dialog</string>

    <string name="OBS_Frustration">Fidgety / Jittery</string>
    <string name="OBS_Ambulation">Pacing / Wandering</string>
    <string name="OBS_Touching">Destroys things</string>
    <string name="OBS_Clothing">Wearing clothes wrong</string>
    <string name="OBS_Physical1">Hitting</string>
    <string name="OBS_Physical2">Scratching</string>
    <string name="OBS_OralFixation">Anxious</string>
    <string name="OBS_Repetition">Obsessive / Same question</string>
    <string name="OBS_Vocal1">Complaining</string>
    <string name="OBS_Vocal2">Shouting</string>
    <string name="OBS_Lost">Getting lost at home</string>
    <string name="OBS_Withdrawn">Bored</string>
    <string name="OBS_Shadowing">Copying, Imitating, Shadowing</string>
    <string name="OBS_Communication">Nonsense / No attention</string>
    <string name="OBS_Other">Other</string>
    <string name="OBS_Annoying">Annoying</string>
</resources>
